Listing of notable changes by release. More detail is usually found in the Git
commit messages and/or the pull requests.

OCMock 3.5 (unreleased)

* Changed stopMocking so that arguments will be forcibly released to break
  retain cycles. This MAY cause some existing tests to fail. However, it
  was always bad practice to use a mock after calling stopMocking. (Ian)
* Added support for watchOS (Morgan Chen)


OCMock 3.4.3 (2018-11-04)

* Changed behaviour when a second mock takes over class method mocking from
  an older mock for the same class. Now, stopMocking is no longer called on
  the first mock, which means that the class generated by it stays around 
  until stopMocking is called, directly or from dealloc; see issue #357 for
  details.
* Changed sequence in which steps are taken to swap out class methods, in
  order to improve thread-safety; see issue #328 for details. (Lily Ballard)


OCMock 3.4.2 (2018-06-25)

* Skipping attempt to replace class methods on subclasses of NSManagedObject,
  which fixes a conflict in newer iOS runtimes.
* Skipping initialisation of mock when init is called again. This allows to
  stub alloc/init; with some limitations. (Alan Terranova)
* Removing dynamically created subclasses when a second mock replaces a mock
  for the same class. (David Sansome)
* Retaining class arguments to invocations. (Jack Wu)


OCMock 3.4.1 (2017-11-04)

* Added workaround for crashes when mocking NSManagedObjects. As a side effect
  it is no longer possible to verify the invocation of class methods on
  NSManagedObject; see issue #338 for details.
* Fixed a memory leak with andThrow:. (Nick Gillett)
* Fixed bug that prevented protocol mocks from being used with
  invokeWithBlock:. (Christopher McGrath)
* Changed type comparison for structs to match new runtime. (Sylvain Defresne)
* Added polyfill for compilation with 10.9 and lower SDKs. (Sylvain Defresne)


OCMock 3.4 (2016-12-22)

* OCMock now requires iOS 8 as minimum deployment target